--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "ts-hapi",
+  "name": "hapijs-scaffolding",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "hapi": "^16.1.1",
+    "hapi-auth-jwt2": "^7.2.4",
+    "hapi-router": "^3.5.0",
     "hapi-sequelize": "^3.0.4",
     "pg": "^6.1.5",
     "sequelize": "^3.30.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
