--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "gulp watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "typings install"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "gulp-typescript": "^3.1.6",
     "gulp-util": "^3.0.8",
     "nodemon": "^1.11.0",
-    "typescript": "^2.2.2"
+    "typescript": "^2.2.2",
+    "typings": "^2.1.1"
   }
 }
